@@ -26,8 +26,6 @@
  *  LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
  *  OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  *  SUCH DAMAGE.
- *
- *  $Id: GXemul.h,v 1.15 2008/03/14 12:12:15 debug Exp $
  */
 
 #include "misc.h"
