@@ -58,6 +58,11 @@ public:
 	/**
 	 * \brief Does nothing, for the dummy UI.
 	 */
+	virtual void UpdateUI();
+
+	/**
+	 * \brief Does nothing, for the dummy UI.
+	 */
 	virtual void ShowStartupBanner();
 
 	/**
