@@ -116,6 +116,12 @@ void ConsoleUI::Initialize()
 }
 
 
+void ConsoleUI::UpdateUI()
+{
+	// Empty.
+}
+
+
 void ConsoleUI::ShowStartupBanner()
 {
 	std::cout << "GXemul "VERSION"     "COPYRIGHT_MSG"\n"SECONDARY_MSG"\n";
