@@ -53,6 +53,11 @@ void NullUI::ShowStartupBanner()
 }
 
 
+void NullUI::UpdateUI()
+{
+}
+
+
 void NullUI::ShowDebugMessage(const string& msg)
 {
 }
